# noir_rsa

./: .gitignore  .release-please-manifest.json  CHANGELOG.md  Nargo.toml  README.md  info.sh  main.nr
.github/: NIGHTLY_CANARY_DIED.md
.github/workflows/: benchmark.yml  nightly-canary.yml  test.yml
example/: Nargo.toml  Prover.toml
example/src/: main.nr
lib/: Nargo.toml
lib/src/: lib.nr  rsa.nr  types.nr
scripts/: build-gates-report.sh
signature_gen/: Cargo.toml
signature_gen/src/: main.rs
src/: bench.nr  lib.nr  rsa.nr  types.nr
