[package]
name = "signature_gen"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "2.33"
toml = "0.5"
noir-bignum-paramgen = { version = "0.1.5" }
hex = { version = "0.4" }
rsa = { git = "https://github.com/RustCrypto/RSA" } # from online repo
rand = { version = "0.8.5" }
num-bigint = { version = "0.8.2", features = [
    "i128",
    "prime",
    "zeroize",
], default-features = false, package = "num-bigint-dig" }
num-traits = { version = "0.2.9", default-features = false, features = [
    "libm",
] }
num-integer = { version = "0.1.39", default-features = false }
rand_core = { version = "0.6.4", default-features = false }
const-oid = { version = "=0.10.0-pre.2", default-features = false }
subtle = { version = "2.1.1", default-features = false }
digest = { version = "=0.11.0-pre.8", default-features = false, features = [
    "alloc",
    "oid",
] }
pkcs1 = { version = "=0.8.0-pre.0", default-features = false, features = [
    "alloc",
    "pkcs8",
] }
pkcs8 = { version = "=0.11.0-pre.0", default-features = false, features = [
    "alloc",
] }
signature = { version = "=2.3.0-pre.3", default-features = false, features = [
    "alloc",
    "digest",
    "rand_core",
] }
spki = { version = "=0.8.0-pre.0", default-features = false, features = [
    "alloc",
] }
zeroize = { version = "1.5", features = ["alloc"] }
sha1 = { version = "=0.11.0-pre.3", default-features = false, features = [
    "oid",
] }
serdect = { version = "0.2.0" }
sha2 = { version = "=0.11.0-pre.3", default-features = false, features = [
    "oid",
] }
serde = { version = "1.0.184", default-features = false, features = ["derive"] }
base64ct = { version = "1", features = ["alloc"] }
hex-literal = "0.4.1"
proptest = "1"
serde_test = "1.0.89"
rand_xorshift = "0.3"
rand_chacha = "0.3"
sha3 = { version = "=0.11.0-pre.3", default-features = false, features = [
    "oid",
] }
generic-array = { version = "1.1.0" }
typenum = { version = "1.17.0" }
itoa = { version = "1.0.11" }
[features]
default = ["std", "pem", "u64_digit"]
hazmat = []
getrandom = ["rand_core/getrandom"]
nightly = ["num-bigint/nightly"]
# serde = ["dep:serde", "dep:serdect", "num-bigint/serde"]
pem = ["pkcs1/pem", "pkcs8/pem"]
pkcs5 = ["pkcs8/encryption"]
u64_digit = ["num-bigint/u64_digit"]
std = ["digest/std", "pkcs1/std", "pkcs8/std", "rand_core/std", "signature/std"]
